# housemate

./: .coverage  .gitignore  CLAUDE.md  Dockerfile  PYTHON_CODE_EXPLAINED.md  README.md  app.py  config.py  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test_auth.py  test_solid_demo.py
.github/workflows/: tests.yml
database/: schema.sql  seed_data.sql
docs/: CORS_CONFIGURATION.md  GIT_SOLID_DEMONSTRATION.md  SECURITY_HEADERS.md  SOLID_EXAMPLES.md
src/facades/: __init__.py  housemate_facade.py
src/infrastructure/: database.py
src/interfaces/: __init__.py  i_cost_strategy.py  i_notification.py  i_repository.py  i_validator.py
src/models/: bill.py  user.py
src/repositories/: bill_repository.py  user_repository.py
src/services/: auth_service.py  bill_manager.py  bill_service.py  cost_calculator.py
src/strategies/: __init__.py  equal_distribution.py  fixed_distribution_strategy.py  percentage_distribution_strategy.py
src/validators/: bill_validator.py
static/css/: custom.css
static/js/: app.js
templates/: 404.html  500.html  about.html  base.html  dashboard.html  index.html
templates/auth/: login.html
templates/bills/: create.html  detail.html  list.html
tests/: conftest.py
tests/integration/: test_auth_flow.py  test_bill_flow.py  test_distributin_flow.py
tests/unit/: test_auth_service.py  test_bill_model.py  test_bill_repository.py  test_bill_service.py  test_cost_calculator.py  test_facade.py  test_strategies.py  test_user_repository.py  test_validators.py
